Add support to configure ignore groups